feat: use solana pay
